quick fix for season selector scrollbar shown on chromium with nothing to scroll for

--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -56,7 +56,7 @@
     margin-top: 15px;
     margin-bottom: 10px;
     width: 100%;
-    overflow-x: scroll;
+    overflow-x: auto;
     border: 1px solid rgba(255, 255, 255, 0.1);
     background: rgba(0, 0, 0, 0.3);
     border-radius: 5px;
